{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 73,
  "lineage": "611580f4-9c9b-6bf5-007a-9cb8a97ae3a4",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/50210a87-6a45-48a7-ad0c-c211333c1110/resourceGroups/rg1/providers/Microsoft.Network/loadBalancers/TestLoadBalancer/frontendIPConfigurations/PublicIPAddress",
                "inbound_nat_rules": [
                  "/subscriptions/50210a87-6a45-48a7-ad0c-c211333c1110/resourceGroups/rg1/providers/Microsoft.Network/loadBalancers/TestLoadBalancer/inboundNatRules/RDPAccess"
                ],
                "load_balancer_rules": [
                  "/subscriptions/50210a87-6a45-48a7-ad0c-c211333c1110/resourceGroups/rg1/providers/Microsoft.Network/loadBalancers/TestLoadBalancer/loadBalancingRules/LBRule"
                ],
                "name": "PublicIPAddress",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/50210a87-6a45-48a7-ad0c-c211333c1110/resourceGroups/rg1/providers/Microsoft.Network/publicIPAddresses/PublicIPForLB1"
              }
            ],
            "id": "/subscriptions/50210a87-6a45-48a7-ad0c-c211333c1110/resourceGroups/rg1/providers/Microsoft.Network/loadBalancers/TestLoadBalancer",
            "location": "westus",
            "name": "TestLoadBalancer",
            "resource_group_name": "rg1",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_public_ip.example",
            "azurerm_resource_group.rg1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "pool",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_ip_configurations": [
              "/subscriptions/50210a87-6a45-48a7-ad0c-c211333c1110/resourceGroups/rg1/providers/Microsoft.Network/networkInterfaces/example-nic/ipConfigurations/internal"
            ],
            "id": "/subscriptions/50210a87-6a45-48a7-ad0c-c211333c1110/resourceGroups/rg1/providers/Microsoft.Network/loadBalancers/TestLoadBalancer/backendAddressPools/pool1",
            "load_balancing_rules": [
              "/subscriptions/50210a87-6a45-48a7-ad0c-c211333c1110/resourceGroups/rg1/providers/Microsoft.Network/loadBalancers/TestLoadBalancer/loadBalancingRules/LBRule"
            ],
            "loadbalancer_id": "/subscriptions/50210a87-6a45-48a7-ad0c-c211333c1110/resourceGroups/rg1/providers/Microsoft.Network/loadBalancers/TestLoadBalancer",
            "name": "pool1"
          },
          "dependencies": [
            "azurerm_lb.example",
            "azurerm_public_ip.example",
            "azurerm_resource_group.rg1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_nat_rule",
      "name": "example1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/50210a87-6a45-48a7-ad0c-c211333c1110/resourceGroups/rg1/providers/Microsoft.Network/loadBalancers/TestLoadBalancer/backendAddressPools/pool1",
            "backend_port": 3389,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/50210a87-6a45-48a7-ad0c-c211333c1110/resourceGroups/rg1/providers/Microsoft.Network/loadBalancers/TestLoadBalancer/frontendIPConfigurations/PublicIPAddress",
            "frontend_ip_configuration_name": "PublicIPAddress",
            "frontend_port": 0,
            "frontend_port_end": 3389,
            "frontend_port_start": 3000,
            "id": "/subscriptions/50210a87-6a45-48a7-ad0c-c211333c1110/resourceGroups/rg1/providers/Microsoft.Network/loadBalancers/TestLoadBalancer/inboundNatRules/RDPAccess2",
            "idle_timeout_in_minutes": 4,
            "loadbalancer_id": "/subscriptions/50210a87-6a45-48a7-ad0c-c211333c1110/resourceGroups/rg1/providers/Microsoft.Network/loadBalancers/TestLoadBalancer",
            "name": "RDPAccess2",
            "protocol": "Tcp",
            "resource_group_name": "rg1"
          },
          "dependencies": [
            "azurerm_lb.example",
            "azurerm_lb_backend_address_pool.pool",
            "azurerm_resource_group.rg1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/50210a87-6a45-48a7-ad0c-c211333c1110/resourceGroups/rg1/providers/Microsoft.Network/loadBalancers/TestLoadBalancer/probes/win-running-probe",
            "interval_in_seconds": 15,
            "load_balancer_rules": [
              "/subscriptions/50210a87-6a45-48a7-ad0c-c211333c1110/resourceGroups/rg1/providers/Microsoft.Network/loadBalancers/TestLoadBalancer/loadBalancingRules/LBRule"
            ],
            "loadbalancer_id": "/subscriptions/50210a87-6a45-48a7-ad0c-c211333c1110/resourceGroups/rg1/providers/Microsoft.Network/loadBalancers/TestLoadBalancer",
            "name": "win-running-probe",
            "number_of_probes": 2,
            "port": 80,
            "probe_threshold": 1,
            "protocol": "Http",
            "request_path": "/"
          },
          "dependencies": [
            "azurerm_lb.example",
            "azurerm_public_ip.example",
            "azurerm_resource_group.rg1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_ids": [
              "/subscriptions/50210a87-6a45-48a7-ad0c-c211333c1110/resourceGroups/rg1/providers/Microsoft.Network/loadBalancers/TestLoadBalancer/backendAddressPools/pool1"
            ],
            "backend_port": 80,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/50210a87-6a45-48a7-ad0c-c211333c1110/resourceGroups/rg1/providers/Microsoft.Network/loadBalancers/TestLoadBalancer/frontendIPConfigurations/PublicIPAddress",
            "frontend_ip_configuration_name": "PublicIPAddress",
            "frontend_port": 80,
            "id": "/subscriptions/50210a87-6a45-48a7-ad0c-c211333c1110/resourceGroups/rg1/providers/Microsoft.Network/loadBalancers/TestLoadBalancer/loadBalancingRules/LBRule",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/50210a87-6a45-48a7-ad0c-c211333c1110/resourceGroups/rg1/providers/Microsoft.Network/loadBalancers/TestLoadBalancer",
            "name": "LBRule",
            "probe_id": "/subscriptions/50210a87-6a45-48a7-ad0c-c211333c1110/resourceGroups/rg1/providers/Microsoft.Network/loadBalancers/TestLoadBalancer/probes/win-running-probe",
            "protocol": "Tcp"
          },
          "dependencies": [
            "azurerm_lb.example",
            "azurerm_lb_backend_address_pool.pool",
            "azurerm_lb_probe.example",
            "azurerm_public_ip.example",
            "azurerm_resource_group.rg1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/50210a87-6a45-48a7-ad0c-c211333c1110/resourceGroups/rg1/providers/Microsoft.Network/networkInterfaces/example-nic",
            "internal_domain_name_suffix": "rfdze2yewyke3ibottkzdbh5rf.dx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/50210a87-6a45-48a7-ad0c-c211333c1110/resourceGroups/rg1/providers/Microsoft.Network/publicIPAddresses/PublicIPForVm",
                "subnet_id": "/subscriptions/50210a87-6a45-48a7-ad0c-c211333c1110/resourceGroups/rg1/providers/Microsoft.Network/virtualNetworks/example-network/subnets/internal"
              }
            ],
            "location": "westus",
            "mac_address": "60-45-BD-02-E6-46",
            "name": "example-nic",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "rg1",
            "virtual_machine_id": "/subscriptions/50210a87-6a45-48a7-ad0c-c211333c1110/resourceGroups/rg1/providers/Microsoft.Compute/virtualMachines/example-machine"
          },
          "dependencies": [
            "azurerm_public_ip.example1",
            "azurerm_resource_group.rg1",
            "azurerm_subnet.example",
            "azurerm_virtual_network.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "web_nic_lb_associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/50210a87-6a45-48a7-ad0c-c211333c1110/resourceGroups/rg1/providers/Microsoft.Network/loadBalancers/TestLoadBalancer/backendAddressPools/pool1",
            "id": "/subscriptions/50210a87-6a45-48a7-ad0c-c211333c1110/resourceGroups/rg1/providers/Microsoft.Network/networkInterfaces/example-nic/ipConfigurations/internal|/subscriptions/50210a87-6a45-48a7-ad0c-c211333c1110/resourceGroups/rg1/providers/Microsoft.Network/loadBalancers/TestLoadBalancer/backendAddressPools/pool1",
            "ip_configuration_name": "internal",
            "network_interface_id": "/subscriptions/50210a87-6a45-48a7-ad0c-c211333c1110/resourceGroups/rg1/providers/Microsoft.Network/networkInterfaces/example-nic"
          },
          "dependencies": [
            "azurerm_lb.example",
            "azurerm_lb_backend_address_pool.pool",
            "azurerm_network_interface.example",
            "azurerm_public_ip.example",
            "azurerm_public_ip.example1",
            "azurerm_resource_group.rg1",
            "azurerm_subnet.example",
            "azurerm_virtual_network.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "web_linuxvm_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/50210a87-6a45-48a7-ad0c-c211333c1110/resourceGroups/rg1/providers/Microsoft.Network/networkSecurityGroups/example-nic-nsg",
            "location": "westus",
            "name": "example-nic-nsg",
            "resource_group_name": "rg1",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Rule-Port-3389",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Rule-Port-80",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_interface.example",
            "azurerm_public_ip.example1",
            "azurerm_resource_group.rg1",
            "azurerm_subnet.example",
            "azurerm_virtual_network.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "web_vmnic_nsg_rule_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "100",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "80",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/50210a87-6a45-48a7-ad0c-c211333c1110/resourceGroups/rg1/providers/Microsoft.Network/networkSecurityGroups/example-nic-nsg/securityRules/Rule-Port-80",
            "name": "Rule-Port-80",
            "network_security_group_name": "example-nic-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "rg1",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_interface.example",
            "azurerm_network_security_group.web_linuxvm_nsg",
            "azurerm_public_ip.example1",
            "azurerm_resource_group.rg1",
            "azurerm_subnet.example",
            "azurerm_virtual_network.example"
          ]
        },
        {
          "index_key": "110",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "3389",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/50210a87-6a45-48a7-ad0c-c211333c1110/resourceGroups/rg1/providers/Microsoft.Network/networkSecurityGroups/example-nic-nsg/securityRules/Rule-Port-3389",
            "name": "Rule-Port-3389",
            "network_security_group_name": "example-nic-nsg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "rg1",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_interface.example",
            "azurerm_network_security_group.web_linuxvm_nsg",
            "azurerm_public_ip.example1",
            "azurerm_resource_group.rg1",
            "azurerm_subnet.example",
            "azurerm_virtual_network.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/50210a87-6a45-48a7-ad0c-c211333c1110/resourceGroups/rg1/providers/Microsoft.Network/publicIPAddresses/PublicIPForLB1",
            "idle_timeout_in_minutes": 4,
            "ip_address": "104.42.218.254",
            "ip_version": "IPv4",
            "location": "westus",
            "name": "PublicIPForLB1",
            "resource_group_name": "rg1",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "example1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/50210a87-6a45-48a7-ad0c-c211333c1110/resourceGroups/rg1/providers/Microsoft.Network/publicIPAddresses/PublicIPForVm",
            "idle_timeout_in_minutes": 4,
            "ip_address": "104.42.113.56",
            "ip_version": "IPv4",
            "location": "westus",
            "name": "PublicIPForVm",
            "resource_group_name": "rg1",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/50210a87-6a45-48a7-ad0c-c211333c1110/resourceGroups/rg1/providers/Microsoft.Network/virtualNetworks/example-network/subnets/internal",
            "name": "internal",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg1",
            "virtual_network_name": "example-network"
          },
          "dependencies": [
            "azurerm_resource_group.rg1",
            "azurerm_virtual_network.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "web_linuxvm_nic_nsg_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/50210a87-6a45-48a7-ad0c-c211333c1110/resourceGroups/rg1/providers/Microsoft.Network/virtualNetworks/example-network/subnets/internal",
            "network_security_group_id": "/subscriptions/50210a87-6a45-48a7-ad0c-c211333c1110/resourceGroups/rg1/providers/Microsoft.Network/networkSecurityGroups/example-nic-nsg",
            "subnet_id": "/subscriptions/50210a87-6a45-48a7-ad0c-c211333c1110/resourceGroups/rg1/providers/Microsoft.Network/virtualNetworks/example-network/subnets/internal"
          },
          "dependencies": [
            "azurerm_network_interface.example",
            "azurerm_network_security_group.web_linuxvm_nsg",
            "azurerm_public_ip.example1",
            "azurerm_resource_group.rg1",
            "azurerm_subnet.example",
            "azurerm_virtual_network.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "73924789-b604-4e14-a02e-9cd59184ff8d",
            "id": "/subscriptions/50210a87-6a45-48a7-ad0c-c211333c1110/resourceGroups/rg1/providers/Microsoft.Network/virtualNetworks/example-network",
            "location": "westus",
            "name": "example-network",
            "resource_group_name": "rg1",
            "subnet": [
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/50210a87-6a45-48a7-ad0c-c211333c1110/resourceGroups/rg1/providers/Microsoft.Network/virtualNetworks/example-network/subnets/internal",
                "name": "internal",
                "security_group": "/subscriptions/50210a87-6a45-48a7-ad0c-c211333c1110/resourceGroups/rg1/providers/Microsoft.Network/networkSecurityGroups/example-nic-nsg"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.rg1"
          ]
        }
      ]
    }
  ]
}